--- a/styles/main.css
+++ b/styles/main.css
@@ -2,23 +2,11 @@
 
 /* Setup variables */
 :root {
-  --mainTextColor-light: #000;
-  --secondaryTextColor-light: rgb(51 51 51);
-  --mainLinkColor-light: #0da2b8;
-  --mainBorderColor-light: rgb(218, 218, 218);
-  --mainBgColor-light: rgb(249, 250, 251);
-
-  --mainTextColor-dark: #fff;
-  --secondaryTextColor-dark: #adb0b1;
-  --mainLinkColor-dark: rgb(30, 190, 214);
-  --mainBorderColor-dark: #2b3031;
-  --mainBgColor-dark: #131415;
-
-  --mainTextColor: var(--mainTextColor-dark);
-  --secondaryTextColor: var(--secondaryTextColor-dark);
-  --mainLinkColor: var(--mainLinkColor-dark);
-  --mainBorderColor: var(--mainBorderColor-dark);
-  --mainBgColor: var(--mainBgColor-dark);
+  --mainTextColor: #fff;
+  --secondaryTextColor: #adb0b1;
+  --mainLinkColor: rgb(30, 190, 214);
+  --mainBorderColor: #2b3031;
+  --mainBgColor: #131415;
 }
 
 * {
@@ -30,12 +18,14 @@
 
 body {
   background-color: var(--mainBgColor);
+  transition: 1s;
 }
 
 p,
 span,
 li {
   color: var(--secondaryTextColor);
+  transition: 1s;
   font-size: 1em;
 }
 
@@ -55,7 +45,7 @@ li {
 }
 
 #container--main {
-  max-width: 700px;
+  max-width: 780px;
   margin: 0 auto;
 }
 
@@ -89,6 +79,7 @@ a {
 
 #email {
   color: var(--mainTextColor);
+  transition: 1s;
 }
 
 #socials--list {
@@ -121,12 +112,14 @@ a {
 
 .card--techstack {
   border: 1px solid var(--mainBorderColor);
+  transition: 1s;
   padding: 0.5em 1em;
   border-radius: 5px;
 }
 
 .card--work-history {
   border-left: 1px solid var(--mainBorderColor);
+  transition: 1s;
   margin-top: 3em;
   margin-bottom: 3em;
   padding-left: 2em;
@@ -134,6 +127,7 @@ a {
 
 .line-break {
   background-color: var(--mainBorderColor);
+  transition: 1s;
   height: 1px;
 }
 
@@ -141,6 +135,7 @@ a {
   padding-top: 1em;
   padding-bottom: 1em;
   border-top: 1px solid var(--mainBorderColor);
+  transition: 1s;
 }
 
 .card--project a {
@@ -151,6 +146,79 @@ a {
 
 .card--project a:hover {
   color: red;
+}
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+Hide default HTML checkbox .switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: black;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px black;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.mode--container {
+  display: flex;
+  position: absolute;
+  column-gap: 1em;
+  margin-left: 85%;
+}
+
+.mode--p {
+  margin-top: 5px;
 }
 
 @media (max-width: 800px) {
@@ -176,5 +244,9 @@ a {
   .card--work-history {
     border-left: none;
     padding-left: 0;
+  }
+
+  .mode--container {
+    margin-left: 70%;
   }
 }
