make text for slider hidden on small screen

--- a/styles/main.css
+++ b/styles/main.css
@@ -249,4 +249,8 @@ input:checked + .slider:before {
   .mode--container {
     margin-left: 70%;
   }
+
+  .mode--container p {
+    visibility: hidden;
+  }
 }
